Fix shadow in stucky.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -638,6 +638,13 @@ ion-app.ios [padding], ion-app.ios [padding] .padding-no .scroll-content{
     margin-bottom: 9px;
 }
 
+.grid-tabs-splash .font-65{
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+
 /* SEARCH */
 .block-search{
     position: relative;
